# Copyright (c) Huawei Technologies Co., Ltd. 2021-2022. All rights reserved.

import("//build/test.gni")

import("//foundation/arkui/ace_engine/ace_config.gni")
import("//foundation/graphic/graphic_2d/graphic_config.gni")

module_output_path = "graphic_3d/render_service"

ohos_unittest("3d_render_service_test") {
  module_out_path = module_output_path

  sources = [
    "engine_factory_test.cpp",
    "engine_service_test.cpp",
    "i_engine_test.cpp",
    "scene_view_core_test.cpp",
    "texture_layer_test.cpp",
    "hualei/hualei_engine_test.cpp"
  ]

  include_dirs = [
    "//third_party/googletest/googletest/include",
    "//foundation/graphic/graphic_3d/render_service/core/include",
    "//utils/native/base/include",
  ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/graphic/graphic_3d/3d_widget_adapter:libwidgetAdapter",
    "//foundation/arkui/ace_engine/build/external_config/flutter/skia:ace_skia_ohos",
    "//foundation/graphic/graphic_2d:libgl",
  ]

  defines = [ "USE_ACE_SKIA" ]

  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

group("unittest") {
  testonly = true

  deps = [ ":3d_render_service_test" ]
}